--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Resim Galerisi</h1>
+        <h1>RANDOM IMAGE GALLERY</h1>
     </header>
     <div class="gallery" id="imageGallery"></div>
     <script src="script.js"></script>    
